--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
   </head>
   <body style="background-color: #C1BDF2;">
-    
+    <img src="giphy (1).gif" alt="Gif image"
+         width="450"
+         height="400">
     <h1>Melanie Menezes</h1>
     <h2>Github Setup Complete!</h2>
   </body>
